# classic-launcher

./: classic-launcher.toml  flake.nix  pyproject.toml  style.css
src/classic_launcher/: __init__.py  config.py  const.py  datatypes.py  gui.py
src/launcher/: __init__.py  config.py  types.py
