[project]
name = "launcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pygobject>=3.54.5",
    "xdg-base-dirs>=6.0.2",
]

[project.scripts]
launcher = "launcher:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]


